--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -1,3 +1,14 @@
 {
-    "welcome": "Welcome to Naya Menu!"
+    "dashboard": "Dashboard",
+    "order": "Order",
+    "menu_management": "Menu Management",
+    "menu": "Menu",
+    "categories": "Categories",
+    "Items": "Items",
+    "Add-ons": "Add-ons",
+    "Feedback": "Feedback",
+    "tables_management": "Tables Management",
+    "venue_management": "Venue Management",
+    "QR_Code": "QR Code",
+    "Settings": "Settings"
 }
