--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -141,6 +141,10 @@
   "password_reset_email_sent": "Password reset email sent!",
   "error_sending_email": "Error sending password reset email.",
 
-   "changes_saved_successfully" : "Changes saved successfully"
+   "changes_saved_successfully" : "Changes saved successfully",
+
+  "Branding_&_Visual_Design": "العلامة التجارية والتصميم البصري",
+  "Upload_Your_Brand_Assets:_Logo": "قم بتحميل عناصر علامتك التجارية: الشعار، صورة الخلفية، لوحة الألوان، والمزيد"
+ 
 
 }
