--- a/assets/lang/tr.json
+++ b/assets/lang/tr.json
@@ -1,7 +1,7 @@
 {
     "English": "İngilizce",
     "Arabic": "Arapça",
-    "French": "Fransızca",
+    "French": "Français",
     "Turkish": "Türkçe",
     "select_language": "Dil Seçiniz",
     "profile": "Profil",
@@ -126,9 +126,32 @@
   "changes_saved_successfully" : "Changes saved successfully", 
   
   "Branding_&_Visual_Design": "Markalaşma ve Görsel Tasarım",
-  "Upload_Your_Brand_Assets:_Logo": "Marka Varlıklarınızı Yükleyin: Logo, Arka Plan Resmi, Renk Paleti ve Daha Fazlası"
+  "Upload_Your_Brand_Assets:_Logo": "Marka Varlıklarınızı Yükleyin: Logo, Arka Plan Resmi, Renk Paleti ve Daha Fazlası",
+   "Tagline": "Slogan",
+  "enter_venue_tagline": "Mekanınızın sloganını girin",
 
-    
-      
+  "website_required": "Website is required.",
+  "invalid_website": "Please enter a valid website URL.",
+  "invalid_website_scheme": "Website must start with http:// or https://.",
+  "invalid_website_tld": "Top-Level Domain should be at least two characters.",
 
+ 
+  
+  "Select_Type_of_your_business": "Select Type of Your Business",
+  "venue_type_required": "Please select a venue type.",
+ 
+  "venue_name_required": "Venue name is required.",
+  "tagline_required": "Tagline is required.",
+  "tagline_too_short": "Tagline is too short.",
+  "tagline_too_long": "Tagline is too long.",
+  "email_required": "Email is required.",
+  "invalid_email": "Please enter a valid email address.",
+  "phone_number_required": "Phone number is required.",
+  "invalid_phone_number": "Please enter a valid phone number.",
+  
+  "save": "Save",
+ 
+  "unable_to_save": "Unable to save. Please try again.",
+  
+  "save_failed": "Save failed"
 }
