--- a/assets/lang/fr.json
+++ b/assets/lang/fr.json
@@ -177,7 +177,29 @@
   "select_button": "Sélectionner",
 
   "Customize_Your_Color_Palette": "Personnalisez votre palette de couleurs",
-  "Select_and_save_your_preferred_colors_to_personalize_your_QR_menu.": "Sélectionnez et enregistrez vos couleurs préférées pour personnaliser votre menu QR."
+  "Select_and_save_your_preferred_colors_to_personalize_your_QR_menu.": "Sélectionnez et enregistrez vos couleurs préférées pour personnaliser votre menu QR.",
+  
+    
+      "menu.error": "Erreur : {error}",
+      "menu.availableMenusAt": "Menus disponibles à",
+      "menu.noMenusFound": "Aucun menu trouvé.",
+      "menu.addNewMenu": "Ajouter un nouveau menu", "cancel": "Annuler",
+  "update": "Mettre à jour",
+   "menu.VisibilityPrompt": "Sélectionnez où votre menu sera visible.",
+   "menu.tabletMenu": "Menu Tablette",
+  "menu.tabletSubtitle": "Afficher le menu sur les tablettes.",
+  "menu.qrMenu": "Menu Code QR",
+  "menu.qrSubtitle": "Afficher le menu via des codes QR.",
+
+  "menu.pickupMenu": "Menu de Ramassage",
+  "menu.pickupSubtitle": "Afficher le menu pour les commandes à emporter.",
+
+  "menu.deliveryMenu": "Menu de Livraison",
+  "menu.deliverySubtitle": "Afficher le menu pour les commandes de livraison."
+      
+   
+  
+  
 
 }
 
