--- a/assets/lang/tr.json
+++ b/assets/lang/tr.json
@@ -176,6 +176,7 @@
    "Customize_Your_Color_Palette": "Renk Paletinizi Özelleştirin",
   "Select_and_save_your_preferred_colors_to_personalize_your_QR_menu.": "QR menünüzü kişiselleştirmek için tercih ettiğiniz renkleri seçin ve kaydedin.",
  
+  "menu.visibility": "Görünürlük",
     "menu.error": "Hata: {error}",
     "menu.availableMenusAt": "için mevcut menüler",
     "menu.noMenusFound": "Menü bulunamadı.",
@@ -193,7 +194,9 @@
     "menu.pickupSubtitle": "Alışveriş siparişleri için menüyü görüntüleyin.",
 
     "menu.deliveryMenu": "Teslimat Menüsü",
-    "menu.deliverySubtitle": "Teslimat siparişleri için menüyü görüntüleyin."
+    "menu.deliverySubtitle": "Teslimat siparişleri için menüyü görüntüleyin.",
+"menu.Availability": "Mevcudiyet",
+    "menu.AvailabilityPrompt": "Menünüzün ne zaman kullanılabilir olacağını seçin."
     
  
 
